gohello-nodeport.yaml
apiVersion: v1
kind: Service
metadata:
   name: gohello-nodeport
spec:
   type: NodePort
   ports:
      - port: 80
        targetPort: 8080
        nodePort: 30213
   selector:
      app: gohello-app
