gohello-service.yaml
apiVersion: v1
kind: Service
metadata:
   name: gohello-service
spec:
   selector:
      app: gohello-app
   ports:
      - protocol: TCP
        port: 80
        targetPort: 8080
