gohello-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
   name: gohello-ingress
spec:
   rules:
      - host: localhost
        http:
           paths:
              - path: /
                backend:
                   serviceName: gohello-nodeport
                   servicePort: 80
